[gd_scene load_steps=2 format=3 uid="uid://optionsmenu"]

[ext_resource type="Script" path="res://scripts/ui/OptionsPanel.gd" id="1_script"]

[node name="OptionsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "AUDIO"

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "DISPLAY"

[node name="FullscreenCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Text Size"

[node name="TextSizeValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "(18)"

[node name="TextSizeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 12.0
max_value = 32.0
step = 2.0
value = 18.0

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "CLOSE"
